@@ -1,3 +1,8 @@
+2011-08-09  Nick Alcock  <nick.alcock@oracle.com>
+
+	* GNUmakefile (check): New target.
+	* runtest.sh: Exit nonzero on failure.
+
 2011-08-08  Nick Alcock  <nick.alcock@oracle.com>
 
 	* runtest.sh: Drop userspace test coverage info into the coverage/
